# agegate-harms

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FISH_VALIDATION.md  LICENSE  MOMIJI.md  Makefile  PUBLISHING.md  README.md  RELEASE_NOTES_v0.2.0.md  RESEARCH_STATUS.md  ROADMAP.md  VM_BUILD_REPORT.md  app.py  pyproject.toml  run_experiment.fish  run_experiment.sh
.github/: labels.yml  release-v0.2.0.md
.github/ISSUE_TEMPLATE/: accessibility.yml  evidence.yml  legal.yml  methodology.yml
.github/workflows/: test.yml
data/: assumptions.yaml  distributional_groups.csv  evidence.csv  regulatory_sources.csv  source_manifest.csv
data/scenarios/: quebec_bill9_v02.yaml
docs/: evidence-schema.md  executive-summary.md  limitations.md  methodology.md  model-v02.md  sommaire-executif-fr.md
packaging/: README.md  install-on-momiji.fish  install-on-momiji.sh
research/: issues.csv
research/interviews/: consent-script.md  interview-protocol.md  note-template.md  (+1 more)
results/: REPORT.md  dashboard.html  deterministic_results.csv  evidence_coverage.csv  evidence_priorities.csv  monte_carlo_summary.csv  parameter_catalog.csv  run_manifest.json  run_stdout.txt  run_timing.txt  sensitivity.csv  test_results.txt
scripts/: check_environment.fish  check_environment.sh  create_research_issues.fish  create_research_issues.py  create_research_issues.sh  export_parameter_catalog.py  momiji_smoke_test.fish  normalize_whitespace.py  release_preflight.fish  release_preflight.sh  validate_evidence.py  watch_regulations.py
tests/: test_git_whitespace_policy.py  test_model.py  test_shell_entrypoints.py  test_whitespace_normalizer.py
(+27 files in other folders)
