[project]
name = "agegate-harms"
version = "0.2.0"
description = "Transparent scenario simulator and evidence registry for age-assurance policy trade-offs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.40"]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]

[project.scripts]
agegate-run = "agegate_harms.cli:main"
agegate-evidence = "agegate_harms.evidence:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
